# oxxo_reto_2025

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
notebooks/: FeatureExtraction.ipynb  HistorialVentas.ipynb  LimpiarData.ipynb  LimpiarData2.ipynb  LimpiarTest.ipynb  LimpiarTrain.ipynb  Modelo.ipynb  RedesNeuronales_RetoOxxo_2025.ipynb  mds.ipynb  numeric_data.ipynb
oxxo_reto_2025/: __init__.py  config.py  dataset.py  features.py  get_labels.py  plots.py
oxxo_reto_2025/modeling/: predict.py  train.py
